--- a/Week 10 ApplicationSettings/Settings.bundle/Root.plist
+++ b/Week 10 ApplicationSettings/Settings.bundle/Root.plist
@@ -44,18 +44,18 @@
 			<key>Key</key>
 			<string>color</string>
 			<key>DefaultValue</key>
-			<string>Green</string>
+			<string>Lavender</string>
 			<key>Values</key>
 			<array>
-				<string>Red</string>
-				<string>Green</string>
-				<string>Blue</string>
+				<string>Gold</string>
+				<string>Silver</string>
+				<string>Bronze</string>
 			</array>
 			<key>Titles</key>
 			<array>
-				<string>Red Color</string>
-				<string>Green Color</string>
-				<string>Blue Color</string>
+				<string>Gold Color</string>
+				<string>Silver Color</string>
+				<string>Bronze Color</string>
 			</array>
 		</dict>
 	</array>
